# retldb

./: .cppcheck  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  buffer_8c.html  buffer_8c.js  buffer_8c__incl.map  buffer_8c__incl.md5  buffer_8c_source.html  classes.html  datatype_8c.html  datatype_8c.js  datatype_8c__incl.map  datatype_8c__incl.md5  datatype_8c_source.html  db_8c.html  db_8c.js  db_8c__incl.map  db_8c__incl.md5  db_8c_source.html  dir_000000_000001.html  dir_000001_000002.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.js  dir_0c0c9fa8a58db41e576adc3ce68c5ee9_dep.map  dir_0c0c9fa8a58db41e576adc3ce68c5ee9_dep.md5  dir_452baf35e1d7639c9f2a5ece4ec85855.html  dir_452baf35e1d7639c9f2a5ece4ec85855.js  dir_452baf35e1d7639c9f2a5ece4ec85855_dep.map  dir_452baf35e1d7639c9f2a5ece4ec85855_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  (+100 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: FindLZ4.cmake  FindSnappy.cmake
examples/: CMakeLists.txt  bulk_load.c  simple_read.c
include/: retldb.h
include/retldb/: error.h  storage.h  types.h
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_1.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_8.js  (+3 more)
src/: CMakeLists.txt
src/common/: db.c  error.c
src/storage/: buffer.c  file.c  mmap.c
src/types/: datatype.c  schema.c
tests/: CMakeLists.txt  main.c  test_main.c  test_main.cpp
tests/common/: test_error.c  test_error.cpp
tests/storage/: test_buffer.c  test_buffer.cpp  test_file.c  test_file.cpp  test_mmap.c  test_mmap.cpp
tests/types/: test_datatype.c  test_datatype.cpp  test_schema.c  test_schema.cpp  test_types.c
